<resources>
    <string name="app_name">Warszawa</string>
    <string name="title_activity_communication">CommunicationActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigate">Navigate</string>
    <string name="attraction">Attraction</string>
    <string name="restaurant">Restaurant</string>
    <string name="bar">Bar</string>
    <string name="party">Party</string>
    <string name="bar_name">Bar Name</string>
    <string name="bar_address">Bar Address</string>
    <string name="party_name">Party Name</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="ticket_price">Ticket price</string>
    <string name="add_image">Add Image</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="select_photo">Select Photo</string>
    <string name="open">Open</string>
</resources>
