<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add.addparty.AddPartyActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textAddPartyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/party_name" />

    <EditText
        android:id="@+id/editAddPartyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <TextView
        android:id="@+id/textAddPartyAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address" />

    <EditText
        android:id="@+id/editAddPartyAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <TextView
        android:id="@+id/textAddPartyDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editAddPartyDay"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="Day" />
        <EditText
            android:id="@+id/editAddPartyMonth"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="Month"/>
        <EditText
            android:id="@+id/editAddPartyYear"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="Year"/>
        <EditText
            android:id="@+id/editAddPartyHours"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="Hours"

            />

        <EditText
            android:id="@+id/editAddPartyMinutes"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="Minutes" />
    </LinearLayout>

    <TextView
        android:id="@+id/textAddPartyPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ticket_price" />

    <EditText
        android:id="@+id/editAddPartyPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textAddPartyDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <EditText
        android:id="@+id/editAddPartyDescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <Button
        android:id="@+id/buttonAddPartyImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_image"
        />

    <Button
        android:id="@+id/buttonAddPartyAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />



</LinearLayout>