<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add.places.AddPlacesActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textAddPlaceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/editAddPlaceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        />
    <TextView
        android:id="@+id/textAddPlaceAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address" />

    <EditText
        android:id="@+id/editAddPlaceAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        />
    <TextView
        android:id="@+id/textAddPlaceOpen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Yes"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioButtonNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="No"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonAddPlacePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_photo"
        />


    <ImageView
        android:id="@+id/imageViewAddPlace"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/common_google_signin_btn_icon_disabled"
        android:visibility="gone"/>

    <Button
        android:id="@+id/buttonAddPlaceAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add new place" />


</LinearLayout>